k8s_configs/user_chat/user_chat_service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-chat-service
  namespace: user-chat-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: user-chat
  type: NodePort
