k8s_configs/user_chat/user_chat_httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: user-chat-httproute
  namespace: user-chat-ns
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: default
  hostnames:
  - hands4hire.space
  rules:
  - matches:
    - path:
        value: /api/user-chat/
        type: PathPrefix
    backendRefs:
    - name: user-chat-service
      port: 80
