k8s_configs/user_chat/user_chat_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-chat-ingress
  namespace: user-chat-ns
  annotations:
    # kubernetes.io/ingress.class is deprecated, but GKE needs it!
    # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#deprecated_annotation
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/load-balancer-type: "External"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "ersms-ingress-external-alb-ipv4"
spec:
  rules:
  - http:
      paths:
      - path: /api/user-chat/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-chat-service
            port:
              number: 80
